--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,9 @@
         justify-content: center;
     }
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
